2007-06-24:
	* src/password.c(pam_sm_chauthtok): when returning, note whether
	we are here for the preliminary check or the actual update in the
	debug message

2007-06-24:
	* src/password.c(pam_sm_chauthtok): set v5_attempted to 1 for
	correctness (#230446, Luke Howard, Pieter Krul).

2007-06-24:
	* src/options.c: don't pass in PAM handles when we don't actually use
	them.

2007-06-24:
	* src/acct.c(pam_sm_acct_mgmt): return PAM_USER_UNKNOWN in event of
	a client-revoked error (#230442, Luke Howard, Christian Bolz, Pieter
	Krul)

2007-06-24:
	* src/stash.c(_pam_krb5_stash_shm_read_v5): correct an argument size
	mismatch calling the logging function.

2006-09-21:
	* src/auth.c(pam_sm_authenticate): try again to clean up the three
	possible setups (pre-entered password, one for which we prompt directly,
	libkrb5 asking questions) to minimize the number of calls we make to
	krb5_get_init_creds_password().
	* src/prompter.c(_pam_krb5_prompt_is_password): take the prompter
	callback data instead of the string.
	* src/prompter.c(_pam_krb5_*prompter): if we're debugging sensitive
	data, log both the answer we give and the default provided by libkrb5
	* src/v5.c(v5_get_creds): guard against potential problems logging a
	NULL password.
	* src/acct.c(pam_sm_acct_mgmt): if the previous attempt to authenticate
	gave us decrypt-integrity-check-failed or preauthentication-failed,
	assume that there's no pam_acct_mgmt error to report (#207410)

2006-09-20:
	* src/password.c(pam_sm_chauthtok): set the AUTHTOK and OLDAUTHTOK
	items properly (report and patch from Michael Calmer).
	* tests/run-tests: clear any policy we've applied to the user when we
	delete the user's entry (report and patch from Michael Calmer).

2006-09-13:
	* src/harness.c: add the ability to preset the AUTHTOK and OLDAUTHTOK
	items.

2006-09-12:
	* src/harness.c: add the ability to preset the AUTHTOK and OLDAUTHTOK
	items.
	* src/prompter.c(_pam_krb5_always_fail_prompter): add a prompter which