@@ -1,7 +1,12 @@
 2007-06-24:
+	* src/prompter.c(_pam_krb5_always_fail_prompter,
+	_pam_krb5_previous_prompter): output the banner and name information
+	if it was given (#230450).
+
+2007-06-24:
 	* src/password.c(pam_sm_chauthtok): when returning, note whether
 	we are here for the preliminary check or the actual update in the
-	debug message
+	debug message (#230444, Luke Howard).
 
 2007-06-24:
 	* src/password.c(pam_sm_chauthtok): set v5_attempted to 1 for
